- Fixed bug #47643 (array_diff() takes over 3000 times longer than php 5.2.4)